files/script/test_all/parse_error/var/test_var_error4.ll



def main(var )
{

}
#script("script/test_all/parse_error/var/test_var_error4.ll")